2010-04-26  Xavier Martinez-Hidalgo  <xmartinez@flumotion.com>

	reviewed by: Jan Urbanski

	* flumotion/test/test_registry.py:
	Instance ComponentRegistry() with empty path list in test suite

	This avoids building the whole `flumotion` registry during the
	test suite execution, speeding it up by 20x.

	Note that the correctness of `flumotion` registry is already
	checked by validate-registry.py, so we do not need to re-check it
	during test_registry execution (which should only check registry
	code correctness).

2010-04-26  Xavier Martinez-Hidalgo  <xmartinez@flumotion.com>

	reviewed by: Jan Urbanski

	* flumotion/common/registry.py:
	Add paths, prefix, and cachePath keyword args to
	ComponentRegistry.__init__().

	This decouples ComponentRegistry initialization from the
	environment (configure and FLU_PROJECT_PATH), increasing its
	testability.

2010-04-15  Thomas Vander Stichele  <thomas at apestaart dot org>

	* flumotion.spec.in:
	  Since the rpm installs in /etc usually and there is no other way
	  to expand the location where rpm will put sysconf, hardcode it.

2010-04-15  Thomas Vander Stichele  <thomas at apestaart dot org>

	* common/validate-registry.py:
	  Only fail on deprecationwarnings that are ours.

2010-04-15  Thomas Vander Stichele  <thomas at apestaart dot org>

	* flumotion/worker/base.py:
	  Log when we create a socket.
	* flumotion/worker/job.py:
	  Add log category to the two heavens that create sockets.

2010-04-14  Sébastien Merle  <sebastien@flumotion.com>

	* flumotion/test/test_import.py:
	Do not try to import everything from external.

2010-04-14  Marc-André Lureau  <mlureau@flumotion.com>

	* po/POTFILES.in:
	Update translatables files.

2010-04-08  Marc-André Lureau  <mlureau@flumotion.com>

	reviewed by: Sébastien Merle

	* autogen.sh:
	* configure.ac:
	Fix automatic autoconf.
	* flumotion/common/common.py:
	Split version string such as '0.7.0.1-foo'

2010-04-08  Marc-André Lureau  <mlureau@flumotion.com>
